fixed overflow

--- a/style.css
+++ b/style.css
@@ -72,6 +72,8 @@ button:hover{
  font-family: 'Roboto Mono', monospace;
  color: white;
  padding-left: 10px;
+ max-height: 500px;
+ overflow-y: scroll;
 }
 
 .modal header{
